Fix not showing DEG/RAD
Summary:
The issue was really using the wrong CSS selector, which is obvious if
you look at what the two selectors represent:

{F15388}
{F15387}

Test Plan:
* Subperseus
* Go to Sample and population standard deviation
* Calculator should have deg/rad button! How RAD is that?

Reviewers: alan, jack

Reviewed By: jack

Differential Revision: http://phabricator.khanacademy.org/D7657

--- a/stylesheets/exercise-content-package/perseus.less
+++ b/stylesheets/exercise-content-package/perseus.less
@@ -53,8 +53,8 @@
 }
 
 &,  // and moar specificity...
-#answer_area input[type=text],
-#answer_area input[type=number],
+#answercontent input[type=text],
+#answercontent input[type=number],
 .framework-perseus input[type=text],
 .framework-perseus input[type=number] {
     .interactive-component;
